--- a/index.html
+++ b/index.html
@@ -1,11 +1,52 @@
+
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>TP CSS</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    
+
+    <!-- 4.1 Cabecera  -->
+    <section>
+        <p>Trabajo practico de CSS.</p>
+        <blockquote></blockquote>
+    </section>
+
+    <!-- 4.2 Propiedades de texto -->
+    <section>
+        <p1>Propiedades de texto en css.</p1>
+        <blockquote1>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis nemo explicabo recusandae perferendis, libero, eveniet consequatur, tenetur sint omnis 
+            cupiditate sit voluptatem id veniam vero dolorum architecto. Asperiores, molestiae cupiditate.</blockquote1>
+    </section>
+
+    <!-- 4.3 Propiedades de Caja -->
+    <section>
+        <div class="caja-normal">Caja normal</div>
+        <div class="caja-destacada">Caja destacada</div>
+    </section>
+
+    <!-- 4.4 Posición Relativa y Absoluta  -->
+    <div class="relativo">
+        Contenedor relativo
+        <div class="absoluto">Div absoluto</div>
+    </div>
+
+    <!-- 4.6 Principios de Grid  -->
+    <div class="grid-container">
+        <div class="grid-item">Item 1</div>
+        <div class="grid-item">Item 2</div>
+        <div class="grid-item">Item 3</div>
+        <div class="grid-item">Item 4</div>
+    </div>
+
+    <!-- 4.7 Principios de Animaciones  -->
+    <section>
+        <div class="animacion"></div>
+        <div class="mover"></div>
+    </section>
+
 </body>
 </html>
